# flatpak-gtk

./: .gitignore  Makefile.am  appchooser.c  configure.ac  filechooser.c  flatpak-gtk.c  gtk.portal  org.freedesktop.portal_backend.desktop.gtk.service.in  xdg-app-gtk.c
